[package]
name = "towerdefense"
version = "0.1.0"
edition = "2021"

[lib]
name = "towerdefense"
path = "src/lib.rs"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
linera-sdk = "0.15.7"
linera-views = "0.15.7"
linera-base = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
linera-sdk = { version = "0.15.7", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "towerdefense_contract"
path = "src/contract.rs"

[[bin]]
name = "towerdefense_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
panic = 'abort'
strip = 'debuginfo'
